<resources>
    <string name="app_name">What\'s My Handicap</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="logo">logo</string>
    <string name="d_o_b">D.O.B</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="back">Back</string>
    <string name="verify_password">Verify Password</string>
    <string name="verify_email">Verify Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_par_and_distance">Enter Par and Distance</string>
    <string name="invalid_par_value">Invalid par value</string>
    <string name="enter_the_stroke_count">Enter the Stroke Count</string>
    <string name="exit">Exit</string>
    <string name="next_hole">Next Hole</string>
    <string name="prev_hole">Prev Hole</string>
    <string name="save_round">Save Round</string>
    <string name="finish_round">Finish Round</string>
    <string name="invalid_email">Invalid email</string>
    <string name="username_and_password_didn_t_match_our_records">Username and Password didn\'t match our records</string>
    <string name="invalid_dob">Invalid dob. Enter the date in format mm-dd-yyyy</string>
    <string name="invalid_confirm_email">Invalid confirm email</string>
    <string name="emails_do_not_match">Emails do not match</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="email_is_already_registered">Email is already Registered</string>
    <string name="club_name">Club Name</string>
    <string name="course_name">Course Name</string>
    <string name="distance">Distance</string>
    <string name="par">Par</string>
    <string name="stroke_count">Stroke Count</string>
    <string name="round_score_will_be_calculated">The round score will be calulated when your click Next Hole</string>
    <string name="delete_round_question">Delete Round?</string>
    <string name="course_name_label">Course Name:</string>
    <string name="club_name_label">Club Name:</string>
    <string name="played_on_label">Played On:</string>
    <string name="new_value">New Value</string>
    <string name="delete_round">Delete Round</string>
    <string name="close_button_content_desc">close button</string>
    <string name="original_value_label">Original Value:</string>
    <string name="new_value_label">New Value:</string>
    <string name="save">Save</string>
    <string name="edit_round">Edit Round</string>
    <string name="todo">TODO</string>
    <string name="edit_club_name">Edit Club Name</string>
    <string name="edit_course_name">Edit Course Name</string>
    <string name="score_label">Score:</string>
    <string name="edit_score">Edit Score</string>
    <string name="edit_par">Edit Par</string>
    <string name="edit_distance">Edit Distance</string>
    <string name="exit_dialog">Exit Dialog</string>
    <string name="num_substitute">###</string>
    <string name="hole_number">Hole Number</string>
    <string name="pound">#</string>
    <string name="stroke_count_border">Stroke Count Border</string>
    <string name="yards">Yds</string>
    <string name="subtract_stroke_from_total_count">Subtract Stroke from total Count</string>
    <string name="add_stroke_to_total_count">add_stroke_to_total_count</string>
    <string name="round_score_border">Round Score Border</string>
    <string name="previous_hole">Prev Hole</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_p2">Handicap?</string>
    <string name="title_p1">What\'s my</string>
    <string name="new_round">New Round</string>
    <string name="previous_scores">Previous Scores</string>
    <string name="your_handicap_label">Your Handicap:</string>
    <string name="handicap_note">Note: Your Handicap will be calculated when you have played at least full 8 rounds</string>
    <string name="settings_button">Settings Button</string>
    <string name="logout_button">Logout Button</string>
    <string name="handicap_border">Handicap Border</string>
    <string name="number_of_holes_label">Number of Holes:</string>
    <string name="enter_club_name">Enter Club name</string>
    <string name="enter_course_name">Enter Course name</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="_9_holes">9 Holes</string>
    <string name="_18_holes">18 Holes</string>
    <string name="new_round_setup">New Round Setup</string>
    <string name="start_round">Start Round</string>
    <string name="select_a_tee">Select a Tee:</string>
    <string name="hole">Hole</string>
    <string name="score">Score</string>
    <string name="total">Total</string>
    <string name="_2_pounds">##</string>
    <string name="best_round">Best Round</string>
    <string name="all_rounds">All Rounds</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="d_o_b_format">D.O.B (mm-dd-yyyy)</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="show_error_here">Show Error Here</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>2
<!--    -->
<!--    Test Values-->
    <string name="test_email">shamal1@gmail.com</string>
    <string name="test_password">123456</string>
    <string name="test_club">Eagle\'s Nest Golf Club</string>
    <string name="test_course_name">Green Course</string>
    <string name="test_firstname">Shamal</string>
    <string name="test_lastname">Siri</string>
    <string name="test_dob">08-08-1996</string>
</resources>