<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="48dp"
    android:layout_height="80dp"
    android:paddingEnd="2dp"
    android:paddingStart="2dp"
    android:background="#39000000"
    android:layout_marginStart="1dp"
    android:layout_marginEnd="1dp">

    <TextView
        android:id="@+id/tv_hole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hole"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        app:layout_constraintEnd_toEndOf="@+id/tv_hole"
        app:layout_constraintStart_toStartOf="@+id/tv_hole"
        app:layout_constraintTop_toBottomOf="@+id/tv_hole" />

    <TextView
        android:id="@+id/tv_par"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/par"
        app:layout_constraintEnd_toEndOf="@+id/tv_hole"
        app:layout_constraintStart_toStartOf="@+id/tv_hole"
        app:layout_constraintTop_toBottomOf="@+id/tv_distance" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        app:layout_constraintEnd_toEndOf="@+id/tv_hole"
        app:layout_constraintStart_toStartOf="@+id/tv_hole"
        app:layout_constraintTop_toBottomOf="@+id/tv_par" />

</androidx.constraintlayout.widget.ConstraintLayout>