<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <Spinner
        android:id="@+id/sp_select_hole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_edit_round" />

    <TextView
        android:id="@+id/tv_title_edit_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit_round"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_label_club_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/club_name_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_edit_round" />

    <TextView
        android:id="@+id/tv_label_course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/course_name_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_club_name" />

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/exit_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_exit" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/distance"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_select_hole"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/tv_edit_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.25" />

    <ImageButton
        android:id="@+id/btn_edit_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/edit_distance"
        android:src="@drawable/ic_edit"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_edit_distance"
        app:layout_constraintStart_toStartOf="@+id/btn_edit_course_name"
        app:layout_constraintTop_toTopOf="@+id/tv_edit_distance" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/par"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_distance" />

    <TextView
        android:id="@+id/tv_edit_par"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/tv_edit_distance"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <ImageButton
        android:id="@+id/btn_edit_par"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/edit_par"
        android:src="@drawable/ic_edit"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_edit_par"
        app:layout_constraintStart_toStartOf="@+id/btn_edit_distance"
        app:layout_constraintTop_toTopOf="@+id/tv_edit_par"
        app:layout_constraintWidth_percent="0.15" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/score_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_par" />

    <TextView
        android:id="@+id/tv_edit_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/tv_edit_par"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <ImageButton
        android:id="@+id/btn_edit_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/edit_score"
        android:src="@drawable/ic_edit"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_edit_score"
        app:layout_constraintStart_toStartOf="@+id/btn_edit_par"
        app:layout_constraintTop_toTopOf="@+id/tv_edit_score" />


    <TextView
        android:id="@+id/tv_club_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_edit_club_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_label_course_name"
        app:layout_constraintTop_toTopOf="@+id/tv_label_club_name" />

    <TextView
        android:id="@+id/tv_course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_edit_course_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_label_course_name"
        app:layout_constraintTop_toTopOf="@+id/tv_label_course_name" />

    <ImageButton
        android:id="@+id/btn_edit_club_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/edit_club_name"
        android:src="@drawable/ic_edit"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_club_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_club_name" />

    <ImageButton
        android:id="@+id/btn_edit_course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/edit_course_name"
        android:src="@drawable/ic_edit"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_course_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_edit_club_name"
        app:layout_constraintTop_toTopOf="@+id/tv_course_name" />

</androidx.constraintlayout.widget.ConstraintLayout>